# fractal

./: .clang-tidy  CMakeLists.txt  Vec.hh  Vector.hh  Window.cc  Window.hh  main.cc  main.frag  main.vert
benchmarks/: CMakeLists.txt  EcsBenchmark.cc
example/: CMakeLists.txt  main.cc
include/v2d/core/: BuiltinComponents.hh  Context.hh  Transform.hh  Window.hh
include/v2d/ecs/: Component.hh  Entity.hh  System.hh  World.hh
include/v2d/gfx/: Buffer.hh  RenderSystem.hh  Sprite.hh  Swapchain.hh
include/v2d/maths/: Common.hh  Vec.hh
include/v2d/physics/: BoxCollider.hh  PhysicsSystem.hh  RigidBody.hh
include/v2d/support/: Array.hh  Assert.hh  Optional.hh  Span.hh  SparseSet.hh  TypeErased.hh  Vector.hh
shaders/: main.vert
sources/: CMakeLists.txt
sources/core/: Context.cc  Window.cc
sources/ecs/: Entity.cc  System.cc  World.cc
sources/gfx/: Buffer.cc  RenderSystem.cc  Swapchain.cc
sources/physics/: Contact.cc  Contact.hh  PhysicsSystem.cc  RigidBody.cc
sources/support/: Assert.cc
